[package]
name = "fnwalk"
version = "0.1.0"
authors = ["Georg Müller <georgmueller@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["libudev"]
libudev = ["tokio-serial/libudev", "serialport/libudev"]

[dependencies]
env_logger = "*"
log = "*"

bytes = "0.5"

futures = "0.3.1"
futures-util = "*"
futures-core = "*"

tokio = { version = "0.2.0", features = ["macros", "time"], default-features = false }
tokio-util = { version = "0.2.0", features = ["codec"], default-features = false }
tokio-serial = { version = "*", default-features = false }
serialport = { version = "*", default-features = false }

actix = "*"
actix-files = "*"
actix-web = "3"
actix-web-actors = "3"

actix-broker = "*"

async-stream = "*"

serde_json = "*"
