[package]
name = "fnwalk"
version = "0.1.0"
authors = ["Georg Müller <georgmueller@gmx.net>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["libudev"]
libudev = ["tokio-serial/libudev", "serialport/libudev"]

[dependencies]
env_logger = "*"
log = "*"

bytes = "*"

futures = "0.3.1"
futures-util = "*"
futures-core = "*"

tokio = { version = "1", features = ["macros", "time", "rt", "rt-multi-thread"], default-features = false }
tokio-util = { version = "0.7", features = ["codec"], default-features = false }
tokio-serial = { version = "5.4.1" }
serialport = { version = "4.0.0", default-features = false }

actix = "0.12.0"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4"

actix-broker = "0.4.1"

async-stream = "*"

serde_json = "*"
